--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <section class="form">
-  <%= form_for @book do |f| %>
+  <%= form_for @user do |f| %>
     <%= f.label :title, "Book Title:  " %>
     <%= f.text_field :title %>
 
