--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
       <ul>
         <li><%= link_to "New User", new_user_path %></li>
         <li><%= link_to "Add a Book", new_book_path %></li>
+        <% if session[:user_id] %>
+          <li><%= link_to "Logout", logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Login", login_path%></li>
+        <% end %>
       </ul>
     </nav>
     <section class="flash">
