--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,20 @@
         <li><%= link_to "Add a Book", new_book_path %></li>
       </ul>
     </nav>
+
+    <section class="user-info">
+      <% if @current_user %>
+        <p>
+          Currently logged in as
+          <%= @current_user.username %>
+          <%= link_to "Log Out", "#" %>
+        </p>
+      <% else %>
+        <p>Not logged in</p>
+        <%= link_to "Log In", "/auth/github" %>
+      <% end %>
+    </section>
+
     <section class="flash">
       <% flash.each do |name, message| %>
         <div class="<%= name %>"><%= message %></div>
